# tw-ethereum

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
cmd/ethtx/: BUILD.bazel  block.go  list.go  main.go  root.go  subscribe.go
internal/config/: BUILD.bazel  list.go  root.go  subscribe.go
internal/telemetry/: BUILD.bazel  zerolog.go
internal/utils/: BUILD.bazel  hex.go  hex_test.go  http.go  http_test.go
pkg/ethereum/: BUILD.bazel  get_balance.go  get_current_block.go  get_transactions.go  parser.go  parser_mock.go  subscribe.go
