load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ethtx_lib",
    srcs = [
        "block.go",
        "list.go",
        "main.go",
        "root.go",
        "subscribe.go",
    ],
    importpath = "github.com/stlimtat/tw-ethereum/cmd/ethtx",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/telemetry",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "ethtx",
    embed = [":ethtx_lib"],
    visibility = ["//visibility:public"],
)
