load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = ["hex.go"],
    importpath = "github.com/stlimtat/tw-ethereum/internal/utils",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)

go_test(
    name = "utils_test",
    srcs = ["hex_test.go"],
    embed = [":utils"],
)
